GUI 前端（JavaFX 17）：全功能界面、GUI 打包/源包脚本、配套文档；core/CLI 不变
- src/gui/：仪表盘/名单导入/候选人列表/面试打分/候选人明细/撤销/排名/初始化向导
- 仅依赖 core（ScoringService + dto），界面规则零复刻、业务错误直显中文 message
- 脚本：fetch-gui-libs.sh(.bat) 下载含 jmods 的 JavaFX 17.0.20；
  build-gui.sh(.bat) 编译 core+gui；run-gui.sh(.bat) 启动；
  package-win.bat 一键生成无黑框 ScoringGUI exe；package-source.sh 生成 Windows 源包
- 修复：H2 2.2.224 拒绝相对路径 URL（默认转绝对路径，props/env 不变）+ 关闭窗口显式 close()
- 文档：GUI使用说明（§9.1 十节）、GUI打包指南-win、GUI交付说明；接口文档 §7.4 更新
- Linux 已验证：Xvfb 实机全流程 + jpackage app-image（jmods）运行验证；acceptance 22/22